Fixed spacing between "How" and "Why" section

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,7 +27,7 @@ html {
 
 .app-how {
   @include app-container;
-  margin-top: 10rem;
+  margin-top: 16rem;
 }
 
 .app-footer {
@@ -58,7 +58,7 @@ html {
   }
 
   .app-why-us {
-    height: 90vh;
+    height: 100vh;
   }
 
   .app-footer {
